# texstudio-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/texstudio_mcp/: __main__.py  bib_validate.py  bib_validate_bibtexparser.py  latex_bib_hints.py  latex_bib_runner.py  latex_biblog.py  latex_chktex.py  latex_compile.py  latex_compile_bib_pipeline.py  latex_dependencies.py  path_policy.py  pdf_metadata.py  pdf_text_preview.py  pipeline_job_resolve.py  server.py  synctex_resolve.py  texstudio_profile_read.py  workspace_fs.py
